# perplexity-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
perplexity_mcp/: __init__.py  server.py
