[project]
name = "perplexity-mcp"
version = "0.1.0"
description = "A perplexity mcp server implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.18.0",
    "openai>=2.6.0",
]


[project.scripts]
# Entry point
perplexity-mcp = "perplexity_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["perplexity_mcp"]

[tool.uv]
package = true